# risk-free-nfts

./: package.json  tsconfig.json
app/create/: page.tsx
candy_lst_machine/: Anchor.toml  Cargo.toml  id.json  package-lock.json
candy_lst_machine/programs/candy_lst_machine/: Cargo.toml
candy_lst_machine/programs/candy_lst_machine/src/: lib.rs
candy_lst_machine/tests/: candy_lst_machine.ts
components/Create/: Create.module.css  Create.tsx
components/Header/: Header.tsx
