[package]
name = "candy_lst_machine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "candy_lst_machine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version="0.30.1", features=["init-if-needed"]}
anchor-spl = "0.30.1"
spl-stake-pool = {version="^1", features = ["no-entrypoint"]}
spl-tlv-account-resolution = "0.6.3"
spl-token-2022 = {version="^2", features=["no-entrypoint"]}
spl-transfer-hook-interface = "0.6.3"
